adding log files to the server